test_suite5/ALAN/test_suite/alan-2022-examples/failing/002160_mutation.alan
source Sz begin get w[3] begin end
